# shapenet_simulator

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  requirements.txt  run_bridge.sh
simulator/: camera_controller.cpp  model_sdf_generator.py  new_scene.sdf  scene_sdf_generator.py
simulator/cfg/: scene_cfg.yaml
simulator/scenes/: new_scene.sdf  scene1.sdf  scene_base.sdf  scene_cfg.yaml  sdf_generator.py
simulator/scenes/sdf_template/: obj5_template.py  obj6_template.py  obj7_template.py
simulator/sdf_template/: __init__.py  model_sdf_template.py  scene_obj10_template.py  scene_obj5_template.py  scene_obj6_template.py  scene_obj7_template.py  scene_obj8_template.py  scene_obj9_template.py
src/camera_controller/: CMakeLists.txt  package.xml
src/data_generator/: batch_gen.py  check_data.py  main.py  simulator_bridge.py  utils.py
src/data_generator/config/: coverage.yaml  random.yaml  uniform.yaml
src/data_generator/path_pattern/: __init__.py  coverage.py  pattern_base.py  random.py  uniform.py
src/ros_ign/ros_ign_bridge/: CMakeLists.txt
src/simulator/: CMakeLists.txt  constants.py  launch_file_generator.py  model_sdf_generator.py  new_scene.sdf  package.xml  scene_base.sdf  scene_sdf_generator.py
src/simulator/cfg/: scene_cfg.yaml
src/simulator/launch/: ros_bridge.launch  simulation.launch
src/simulator/scenes/: scene01.sdf  scene02.sdf  scene03.sdf  scene04.sdf  scene05.sdf  scene06.sdf  scene07.sdf  scene08.sdf  scene09.sdf  scene1.sdf  scene10.sdf  scene11.sdf  scene12.sdf  (+4 more)
(+36 files in other folders)
