<?xml version="1.0"?>
<package format="2">
  <name>camera_controller</name>
  <version>0.0.0</version>
  <description>The camera_controller package</description>

  <maintainer email="ljin@uni-bonn.de">Liren Jin</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ignition-transport11</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
